<resources>
    <string name="app_name">DailyReset</string>
    <string name="title_home">Home</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_quizz">Quizz</string>
    <string name="title_settings">Settings</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>

    <string name="loading">Loading…</string>
    <string name="streak">Current streak: %1$d</string>

    <string name="settings_title_about">About</string>
    <string name="settings_github">GitHub</string>
    <string name="settings_version">Version</string>

    <string name="settings_title_data">Data</string>
    <string name="settings_backup">Export studied words</string>
    <string name="settings_delete">Delete all</string>
    <string name="settings_warning">This action cannot be undone</string>
    <string name="settings_explanation">Your data were saved in your clipboard, please keep them in a safe place.</string>

    <string name="settings_question_count">Number max of questions per quizz</string>
    <string name="settings_language">Language studied</string>

    <string name="quizz_choices">Multiple choices</string>
    <string name="quizz_free">Free text</string>

    <string name="not_available">This feature is not available yet</string>

    <string name="home_current">Daily word:</string>

    <string name="quizz_title_training">Training</string>
    <string name="quizz_title_exam">Exam</string>

    <string name="exam_not_validated">You didn\'t validate today exam yet</string>
    <string name="exam_validated">You validated today exam!</string>

    <string name="quizz_words">Word list</string>
    <string name="quizz_sentences">Sample sentences</string>
    <string name="quizz_no_sentence">No sample sentence available</string>
    <string name="quizz_your_answer">Your answer:</string>
    <string name="quizz_right_answer">Correct answer:</string>
    <string name="quizz_error">You must learn at least 2 words before doing a quizz, come back tomorrow.</string>

    <string name="quizz_result_good">Good answers</string>
    <string name="quizz_result_bad">Bad answers</string>
    <string name="quizz_send">Send</string>
    <string name="quizz_clear">Clear</string>
    <string name="quizz_help">Help</string>

    <string name="quizz_end_title">You reached the end of the quizz.</string>

    <string name="ocr_download">Do you want to download OCR data for this language? You will need an internet connection</string>
    <string name="ocr_downloading">Data are being downloaded, please wait…</string>
    <string name="ocr_error">An error occurred while downloading OCR data: </string>

    <string name="other_error">An unexpected error occurred: </string>
</resources>