<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/title_quizz">

        <EditTextPreference
            android:key="questionCount"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/settings_question_count" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/settings_title_language">
        <ListPreference
            android:entries="@array/language"
            android:entryValues="@array/languageAlias"
            android:key="language"
            android:title="@string/settings_language" />
    </PreferenceCategory>

    <PreferenceCategory android:title="Preference category">
        <Preference
            android:id="@+id/backup"
            app:key="backup"
            app:title="@string/settings_backup" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/settings_title_about">
        <Preference
            app:key="version"
            app:title="@string/settings_version" />
        <Preference
            app:key="github"
            app:title="@string/settings_github" />
    </PreferenceCategory>
</PreferenceScreen>